--- a/RazorPDF/RazorPDF.csproj
+++ b/RazorPDF/RazorPDF.csproj
@@ -1,35 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+		<PackageVersion>1.1.0</PackageVersion>
+		<PackageId>Theoistic.RazorPDF</PackageId>
+		<Title>RazorPDF</Title>
+		<Authors>Theodor Solbjorg</Authors>
+		<Description>A library to generate PDF's from Razor views.</Description>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageTags>aspnetcore pdf razor</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/Theoistic/RazorPDF</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Theoistic/RazorPDF</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="Resources\32 bit\libwkhtmltox.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\32 bit\libwkhtmltox.dylib">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\32 bit\libwkhtmltox.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\64 bit\libwkhtmltox.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\64 bit\libwkhtmltox.dylib">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\64 bit\libwkhtmltox.so">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<!-- Windows -->
+		<None Include="Resources\32 Bit\libwkhtmltox.dll" Pack="true" PackagePath="runtimes\win-x86\native" />
+		<None Include="Resources\64 Bit\libwkhtmltox.dll" Pack="true" PackagePath="runtimes\win-x64\native" />
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.12" />
-  </ItemGroup>
+		<!-- Linux -->
+		<None Include="Resources\32 Bit\libwkhtmltox.so" Pack="true" PackagePath="runtimes\linux-x86\native" />
+		<None Include="Resources\64 Bit\libwkhtmltox.so" Pack="true" PackagePath="runtimes\linux-x64\native" />
+
+		<!-- macOS -->
+		<None Include="Resources\32 Bit\libwkhtmltox.dylib" Pack="true" PackagePath="runtimes\osx-x86\native" />
+		<None Include="Resources\64 Bit\libwkhtmltox.dylib" Pack="true" PackagePath="runtimes\osx-x64\native" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.12" />
+	</ItemGroup>
 
 </Project>
