--- a/Theoistic.PDF/Theoistic.PDF.csproj
+++ b/Theoistic.PDF/Theoistic.PDF.csproj
@@ -5,17 +5,17 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<PackageVersion>1.3.0</PackageVersion>
-		<PackageId>Theoistic.RazorPDF</PackageId>
-		<Title>RazorPDF</Title>
+		<PackageVersion>0.8.0</PackageVersion>
+		<PackageId>Theoistic.PDF</PackageId>
+		<Title>Theoistic.PDF</Title>
 		<Authors>Theodor Solbjorg</Authors>
-		<Description>A library to generate PDF's from Razor views.</Description>
+		<Description>A library to generate PDF's from html.</Description>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageTags>aspnetcore pdf razor</PackageTags>
+		<PackageTags>aspnetcore pdf</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageProjectUrl>https://github.com/Theoistic/RazorPDF</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/Theoistic/RazorPDF</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/Theoistic/Theoistic.PDF</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/Theoistic/Theoistic.PDF</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 
@@ -38,7 +38,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.12" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
